--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -217,9 +217,9 @@ footer p {
 }
 
 .form-field-input:focus {
-  outline: none;                
-  border: 1px solid #4344452e;    
-  box-shadow: 0 0 0 2px #6820761b; 
+  outline: none;
+  border: 1px solid #4344452e;
+  box-shadow: 0 0 0 2px #6820761b;
 }
 
 .editor-container {
@@ -287,6 +287,15 @@ textarea,
   width: 100%;
 }
 
+textarea {
+  overflow: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+textarea ::-webkit-scrollbar {
+  display: none;
+}
+
 .visualizer {
   background-color: #ffffff;
   border: 1px solid #ccc;
@@ -317,6 +326,15 @@ textarea,
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.visualizer-content {
+  overflow: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.visualizer-content ::-webkit-scrollbar {
+  display: none;
 }
 
 .visualizer-content h1 {
@@ -411,7 +429,6 @@ textarea,
   width: 100%;
 }
 
-/* CSS básico para la Sidebar */
 .sidebar {
   position: fixed;
   top: 0;
@@ -455,7 +472,6 @@ textarea,
   display: none;
 }
 
-/* Estilos para la Modal */
 .modal-overlay {
   position: fixed;
   top: 0;
