--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,7 +41,9 @@ img {
 .return-box {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
   height: 104px;
   width: 310px;
 }
@@ -427,6 +429,12 @@ textarea ::-webkit-scrollbar {
 .visualizer-content ul p,
 .visualizer-content ol p {
   width: 100%;
+}
+
+.visualizer-content li {
+  color: black;
+  font-style: Bold;
+  font-size: 11px;
 }
 
 .sidebar {
