--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -519,3 +519,17 @@ textarea ::-webkit-scrollbar {
 .modal-actions button:hover {
   background-color: #682076;
 }
+
+.request-table {
+  max-width: 1200px;
+  max-height: 600px;
+}
+
+.request-table td {
+  text-align: center;
+  padding: 5px;
+}
+.actions {
+  display: flex;
+  gap: 5px;
+}
