--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -524,8 +524,8 @@ textarea ::-webkit-scrollbar {
   max-height: 600px;
   width: 100%;
   border-collapse: collapse;
-  font-size: 0.9rem;
   color: #2d2d2d;
+  max-width:100%;
 }
 
 .request-table th{
@@ -533,11 +533,13 @@ textarea ::-webkit-scrollbar {
   padding: 8px;
   color: #682076;
   font-weight: 700;
+  font-size: 1.1rem;
 }
 
 .request-table td{
   text-align: left;
   padding: 8px;
+  font-size: 1rem;
 }
 
 table th:nth-child(1), /* ID */
@@ -585,6 +587,28 @@ table td:nth-child(7) {
   width: 10%;
 }
 
+table th:nth-child(8), /* Creación */
+table td:nth-child(8) {
+  width: 5%;
+}
+
+table th:nth-child(8), /* última Actualización*/
+table td:nth-child(8) {
+  width: 5%;
+}
+
+.dashboard-container {
+  background-color: #fff;
+  padding: 1.25rem;
+  border-radius: 1rem;
+  border: 1px solid #e5e7eb;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  margin-bottom: 1.5rem;
+  color: #2d2d2d;
+  max-width:1200px;
+  margin:auto;
+}
+
 .dashboard-title,
 .filters-title {
   color: #682076;
@@ -601,7 +625,7 @@ table td:nth-child(7) {
 .filters-title {
   text-align: left;
   margin-bottom: 10px;
-  font-size: 14px;
+  font-size: 1.1rem;
 }
 
 .filters-container {
@@ -611,8 +635,8 @@ table td:nth-child(7) {
   border: 1px solid #e5e7eb;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
   margin-bottom: 1.5rem;
-  font-size: 0.9rem;
   color: #2d2d2d;
+  width: 100%;
 }
 
 .filters-row {
@@ -647,12 +671,12 @@ table td:nth-child(7) {
 }
 
 .filters-container select,
-.filters-container input[type="date"] {
+.filters-container input {
   width: 100%;
   padding: 0.5rem 0.75rem;
   border: 1px solid #d1d5db;
   color: #2d2d2d;
-  font-size: 0.9rem;
+  font-size: 1rem;
   transition: all 0.2s ease;
   background-color: #fff;
 }
@@ -665,7 +689,7 @@ table td:nth-child(7) {
 .filters-container label {
   display: flex;
   flex-direction: column;
-  font-size: 0.9rem;
+  font-size: 1rem;
   color: #2d2d2d;
   font-weight: 700;
 }
@@ -676,6 +700,7 @@ table td:nth-child(7) {
   align-items: center;
   gap: 8px;
   padding: 10px 0;
+  font-size: 1rem;
   flex-wrap: wrap; 
 }
 
@@ -686,7 +711,7 @@ table td:nth-child(7) {
   border-radius: 6px;
   padding: 6px 12px;
   cursor: pointer;
-  font-size: 0.9rem;
+  font-size: 1rem;
   transition: background-color 0.2s ease, transform 0.1s ease;
 }
 
@@ -716,4 +741,3 @@ table td:nth-child(7) {
     font-size: 0.8rem;
   }
 }
-
