--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -315,13 +315,28 @@ textarea ::-webkit-scrollbar {
 
 .vizualizer-container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   height: 100%;
-  justify-content: center;
+  justify-content: flex-start;
   background: rgba(255, 255, 255, 0.48);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10.7px);
   -webkit-backdrop-filter: blur(10.7px);
   border: 1px solid rgba(255, 255, 255, 0.3);
+  padding-top: 10px;
+  gap: 10px;
+}
+
+.char-counter {
+  font-size: 14px;
+  font-weight: 600;
+  padding: 6px 14px;
+  background-color: #ffffff;
+  border-radius: 999px;
+  color: #682076;
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 2px 6px;
+  align-self: center;
 }
 
 .visualizer-content {
