--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -824,3 +824,14 @@ textarea ::-webkit-scrollbar {
 #chatbase-bubble-button {
   margin-bottom: 60px;
 }
+
+.view-toggle {
+  cursor: pointer;
+  margin-right: 10px;
+  margin-left: 10px;
+  font-size: 16px;
+}
+
+.padding-title {
+  padding: 20px;
+}
